Fixes tooltip on smaller screens

--- a/client/stylesheets/globals.import.styl
+++ b/client/stylesheets/globals.import.styl
@@ -80,11 +80,6 @@ table tr:last-child
   .tooltip-inner
     min-width 100px
     max-width 225px
-  .tooltip
-    left 50% !important
-    transform translate(-50%, 0)
-  .tooltip-arrow
-    top 0 !important
   #main
     margin-top 55px
     min-height 300px
