--- a/client/stylesheets/loading.import.styl
+++ b/client/stylesheets/loading.import.styl
@@ -11,22 +11,27 @@
     display block
     font-size 200px
     line-height 200px
-    -moz-animation spin 2s infinite linear
-    -webkit-animation spin 2s infinite linear
     animation spin 2s infinite linear
+    -webkit-animation spin 2s infinite linear
+    -moz-animation spin 2s infinite linear
+    -o-animation spin 3s infinite linear
 
-@-webkit-keyframes spin
-  0%
-      -webkit-transform: rotate(0deg)
-  100% 
-    -webkit-transform: rotate(360deg)
 @keyframes spin
   0% 
     transform:rotate(0deg)
   100% 
     transform:rotate(360deg)
+@-webkit-keyframes spin
+  0%
+    -webkit-transform rotate(0deg)
+  100% 
+    -webkit-transform rotate(360deg)
 @-moz-keyframes spin
   0%
-    -moz-transform: rotate(0deg)
+    -moz-transform rotate(0deg)
   100% 
-    -moz-transform: rotate(360deg)
+    -moz-transform rotate(360deg)
+@-o-keyframes spin
+    -o-transform rotate(0deg)
+  100% 
+    -o-transform rotate(360deg)
